--- a/app/src/main/res/layout/activity_point.xml
+++ b/app/src/main/res/layout/activity_point.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PointActivity"
     android:orientation="vertical">
@@ -27,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0"
-            android:src="@drawable/met_kirovskiy" />
+            app:srcCompat="@drawable/met_kirovskiy" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -62,7 +63,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0"
-            android:src="@drawable/dist_1" />
+            app:srcCompat="@drawable/dist_1" />
         </LinearLayout>
 
 </LinearLayout>
