--- a/app/src/main/res/values/Theme.xml
+++ b/app/src/main/res/values/Theme.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <style name="MyTheme" parent="@android:style/Theme.NoTitleBar.Fullscreen">
+    <style name="MyTheme" parent="@style/Theme.AppCompat.NoActionBar">
 
         <item name="android:windowBackground">@drawable/background</item>
         <item name="android:buttonStyle">@style/MyButton</item>
