--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="${relativePackage}.${activityClass}"
-    android:id="@+id/ll">
+    android:orientation="vertical">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -17,8 +14,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView2"
-        android:background="@drawable/line"/>
+		android:background="@drawable/line"/>
 
     <LinearLayout
         android:orientation="vertical"
@@ -29,8 +25,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/imageView"
-            android:background="@drawable/name"
+			android:background="@drawable/name"
             android:paddingLeft="3dp" />
 
         <Button
