--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,62 +1,61 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:orientation="vertical">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/img_animation"
-        android:background="@drawable/fontan"
-        android:scaleType="centerCrop"
-        />
+	<ImageView
+		android:id="@+id/img_animation"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:background="@drawable/fontan"
+		android:scaleType="centerCrop" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-		android:background="@drawable/line"/>
+	<ImageView
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:background="@drawable/line" />
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:paddingTop="20dp">
+	<LinearLayout
+		android:layout_width="fill_parent"
+		android:layout_height="fill_parent"
+		android:orientation="vertical"
+		android:paddingTop="20dp">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+		<ImageView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
 			android:background="@drawable/name"
-            android:paddingLeft="3dp" />
+			android:paddingLeft="3dp" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/bt_point"
-            android:id="@+id/bt_place" />
+		<Button
+			android:id="@+id/bt_place"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/bt_point" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/bt_quest"
-            android:id="@+id/bt_quest" />
+		<Button
+			android:id="@+id/bt_quest"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/bt_quest" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/bt_map"
-            android:id="@+id/bt_achiv" />
+		<Button
+			android:id="@+id/bt_achiv"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/bt_map" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/bt_setting"
-            android:id="@+id/bt_setting" />
+		<Button
+			android:id="@+id/bt_setting"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/bt_setting" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/bt_exit"
-            android:id="@+id/bt_exit" />
-    </LinearLayout>
+		<Button
+			android:id="@+id/bt_exit"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/bt_exit" />
+	</LinearLayout>
 
 </FrameLayout>
