--- a/app/src/main/res/layout/activity_quest.xml
+++ b/app/src/main/res/layout/activity_quest.xml
@@ -1,42 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:orientation="vertical">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/scrollView"
-        android:layout_weight="1">
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+	<ScrollView
+		android:id="@+id/scrollView"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:layout_weight="1">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/img_quest" />
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#000"
-            android:id="@+id/tv_quest" />
+			<ImageView
+				android:id="@+id/img_quest"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content" />
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+			<TextView
+				android:id="@+id/tv_quest"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:textColor="#000" />
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/bt_quest_task"
-                android:id="@+id/bt_next_task"
-                android:layout_gravity="center_horizontal" />
+			<FrameLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content">
 
-        </FrameLayout>
+				<Button
+					android:id="@+id/bt_next_task"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_gravity="center_horizontal"
+					android:text="@string/bt_quest_task" />
 
-        </LinearLayout>
-    </ScrollView>
+			</FrameLayout>
+
+		</LinearLayout>
+	</ScrollView>
 </LinearLayout>
