--- a/app/src/main/res/layout/quest_task_gps.xml
+++ b/app/src/main/res/layout/quest_task_gps.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/tv_quest_gps"
-        android:layout_gravity="center_horizontal" />
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent"
+	android:orientation="vertical">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/bt_reply"
-        android:layout_gravity="center_horizontal" />
+	<TextView
+		android:id="@+id/tv_quest_gps"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center_horizontal"
+		android:text="New Text" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/img_quest_gps"
-        android:layout_gravity="center_horizontal" />
-    </LinearLayout>
+	<Button
+		android:id="@+id/bt_reply"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center_horizontal"
+		android:text="New Button" />
+
+	<ImageView
+		android:id="@+id/img_quest_gps"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center_horizontal" />
+</LinearLayout>
