--- a/app/src/main/res/layout/activity_point1.xml
+++ b/app/src/main/res/layout/activity_point1.xml
@@ -28,12 +28,16 @@
 		android:layout_height="wrap_content"
 		android:layout_gravity="center"
 		android:background="#000"
-		android:padding="2dp" />
+		android:padding="2dp"
+		android:visibility="invisible" />
 
 	<ImageButton
 		android:id="@+id/bt_open_img"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_gravity="center" />
+		android:layout_gravity="center"
+		android:background="@android:color/transparent"
+		android:src="@drawable/test"
+		android:visibility="invisible" />
 
 </FrameLayout>
