--- a/app/src/main/res/layout/activity_point1.xml
+++ b/app/src/main/res/layout/activity_point1.xml
@@ -3,7 +3,7 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
 
-	<endroad.photoquest.places.panoram.SurfaceView
+	<ru.endroad.panorama.PanoramaView
 		android:id="@+id/gl_surface_view"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent" />
