--- a/app/src/main/res/layout/place_list_fragment.xml
+++ b/app/src/main/res/layout/place_list_fragment.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
+	xmlns:tools="http://schemas.android.com/tools"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:orientation="vertical">
 
 	<LinearLayout
@@ -29,11 +31,11 @@
 
 	</LinearLayout>
 
-	<ListView
-		android:id="@+id/lvMain"
+	<androidx.recyclerview.widget.RecyclerView
+		android:id="@+id/list"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:divider="#8000"
-		android:dividerHeight="1dp"></ListView>
+		app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+		tools:item="@layout/panoramic_place_item"/>
 
 </LinearLayout>
